--- a/.github/workflows/update-version-file.yml
+++ b/.github/workflows/update-version-file.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v4
-      - name: Update VESRION file
+        with:
+          fetch-depth: 0
+      - name: Update VERSION file
         run: |
           make update-version
