--- a/.github/workflows/update-version-file.yml
+++ b/.github/workflows/update-version-file.yml
@@ -1,16 +1,33 @@
-name: Update VERSION file
+name: Update VERSION File
 
 on:
   push:
-      branches: [main]
+    branches:
+      - main
 
 jobs:
-  update_version:
-    runs-on: "ubuntu-latest"
+  update-version-file:
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Update VERSION file
-        run: |
-          make update-version
+    # Step 1: Checkout the repository with all history and tags (fetch-depth: 0)
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch the entire history to get all tags
+
+    # Step 2: Run the make target to update the VERSION file
+    - name: Update VERSION file
+      run: make update-version
+
+    # Step 3: Commit and push changes if VERSION file is modified
+    - name: Commit and push changes
+      run: |
+        if [ -n "$(git status --porcelain VERSION)" ]; then
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add VERSION
+          git commit -m "Update VERSION file to latest tag"
+          git push
+        else
+          echo "No changes to VERSION file."
